--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 glam = { version = "0.30.4", default-features = false, features = ["std"] }
 serde = { version = "1.0.219", features = ["derive"], optional = true }
+thiserror = "2.0.12"
 
 [features]
 serde = ["dep:serde"]
